YT-15675: Remove bolts from ytclient Remove bolts from ytclient